rtest/tests/jsr335/Semantics/LambdaTypeAnalysis/AssignmentContext/ShouldFail/syntax23/Test.java
// .result=COMPILE_FAIL
import java.util.*;

public class Test {
	public interface TestInterface {
		 public void m(int a);
	}
	
	public static void main(String[] args) {
		TestInterface t = a -> a + 4;
    }
}
